@@ -1,8 +1,6 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.compiler.server;
 
-import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.LoadingCache;
 import com.intellij.DynamicBundle;
 import com.intellij.compiler.CompilerConfiguration;
 import com.intellij.compiler.CompilerConfigurationImpl;
@@ -77,8 +75,14 @@ import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.VirtualFileManager;
 import com.intellij.openapi.vfs.newvfs.BulkFileListener;
 import com.intellij.openapi.vfs.newvfs.events.VFileEvent;
-import com.intellij.openapi.wm.IdeFrame;
-import com.intellij.serviceContainer.AlreadyDisposedException;
+import com.intellij.platform.backend.workspace.GlobalWorkspaceModelCache;
+import com.intellij.platform.backend.workspace.WorkspaceModelCache;
+import com.intellij.platform.eel.EelDescriptor;
+import com.intellij.platform.eel.path.EelPath;
+import com.intellij.platform.eel.provider.EelNioBridgeServiceKt;
+import com.intellij.platform.eel.provider.EelProviderUtil;
+import com.intellij.platform.eel.provider.LocalEelDescriptor;
+import com.intellij.platform.eel.provider.utils.EelPathUtils;
 import com.intellij.ui.ComponentUtil;
 import com.intellij.util.*;
 import com.intellij.util.concurrency.AppExecutorUtil;
@@ -91,7 +95,9 @@ import com.intellij.util.io.BaseOutputReader;
 import com.intellij.util.io.storage.HeavyProcessLatch;
 import com.intellij.util.lang.JavaVersion;
 import com.intellij.util.messages.MessageBusConnection;
+import com.intellij.util.messages.SimpleMessageBusConnection;
 import com.intellij.util.net.NetUtils;
+import com.intellij.workspaceModel.ide.impl.InternalEnvironmentNameImpl;
 import io.netty.bootstrap.ServerBootstrap;
 import io.netty.channel.Channel;
 import io.netty.channel.ChannelInitializer;
@@ -116,12 +122,12 @@ import org.jetbrains.jps.cmdline.ClasspathBootstrap;
 import org.jetbrains.jps.incremental.Utils;
 import org.jetbrains.jps.incremental.storage.ProjectStamps;
 import org.jetbrains.jps.javac.ExternalJavacProcess;
+import org.jetbrains.jps.javac.Iterators;
 import org.jetbrains.jps.model.java.compiler.JavaCompilers;
 import org.jvnet.winp.Priority;
 import org.jvnet.winp.WinProcess;
 
-import javax.tools.JavaCompiler;
-import javax.tools.ToolProvider;
+import javax.tools.*;
 import java.awt.*;
 import java.io.File;
 import java.io.IOException;
@@ -129,14 +135,12 @@ import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.text.SimpleDateFormat;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -146,6 +150,11 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import static com.intellij.ide.impl.ProjectUtil.getProjectForComponent;
+import static com.intellij.openapi.diagnostic.InMemoryHandler.IN_MEMORY_LOGGER_ADVANCED_SETTINGS_NAME;
+import static com.intellij.platform.eel.provider.EelNioBridgeServiceKt.asEelPath;
+import static com.intellij.platform.eel.provider.EelProviderUtil.upgradeBlocking;
+import static com.intellij.platform.eel.provider.utils.EelPathUtils.transferContentsIfNonLocal;
 import static org.jetbrains.jps.api.CmdlineRemoteProto.Message.ControllerMessage.ParametersMessage.TargetTypeBuildScope;
 
 public final class BuildManager implements Disposable {
@@ -166,11 +175,13 @@ public final class BuildManager implements Disposable {
   private static final int MINIMUM_REQUIRED_JPS_BUILD_JAVA_VERSION = 11;
   private final boolean IS_UNIT_TEST_MODE;
   private static final String IPR_EXTENSION = ".ipr";
-  private static final String IDEA_PROJECT_DIR_PATTERN = "/.idea/";
-  private static final Function<String, Boolean> PATH_FILTER =
-    SystemInfo.isFileSystemCaseSensitive ?
-    s -> !(s.contains(IDEA_PROJECT_DIR_PATTERN) || s.endsWith(IWS_EXTENSION) || s.endsWith(IPR_EXTENSION)) :
-    s -> !(Strings.endsWithIgnoreCase(s, IWS_EXTENSION) || Strings.endsWithIgnoreCase(s, IPR_EXTENSION) || StringUtil.containsIgnoreCase(s, IDEA_PROJECT_DIR_PATTERN));
+  private static final String IDEA_PROJECT_DIR_PATTERN = ".idea";
+  private static final Predicate<InternedPath> PATH_FILTER =
+    SystemInfo.isFileSystemCaseSensitive?
+    path -> !(path.contains(IDEA_PROJECT_DIR_PATTERN::equals) || path.getName().endsWith(IWS_EXTENSION) || path.getName().endsWith(IPR_EXTENSION)) :
+    path -> !(path.contains(elem -> StringUtil.equalsIgnoreCase(elem, IDEA_PROJECT_DIR_PATTERN)) || Strings.endsWithIgnoreCase(path.getName(), IWS_EXTENSION) || Strings.endsWithIgnoreCase(path.getName(), IPR_EXTENSION));
+
+  private static final String JPS_USE_EXPERIMENTAL_STORAGE = "jps.use.experimental.storage";
 
   private final String myFallbackSdkHome;
   private final String myFallbackSdkVersion;
@@ -185,51 +196,9 @@ public final class BuildManager implements Disposable {
   private final Map<String, ProjectData> myProjectDataMap = Collections.synchronizedMap(new HashMap<>());
   private final AtomicInteger mySuspendBackgroundTasksCounter = new AtomicInteger(0);
 
-  private final BuildManagerPeriodicTask myAutoMakeTask = new BuildManagerPeriodicTask() {
-    @Override
-    protected int getDelay() {
-      return Registry.intValue("compiler.automake.trigger.delay");
-    }
+  private final BuildManagerPeriodicTask myAutoMakeTask;
 
-    @Override
-    protected void runTask() {
-      runAutoMake();
-    }
-
-    @Override
-    protected boolean shouldPostpone() {
-      // Heuristics for automake postpone decision:
-      // 1. There are unsaved documents OR
-      // 2. The IDE is not idle: the last activity happened less than 3 seconds ago (registry-configurable)
-      if (FileDocumentManager.getInstance().getUnsavedDocuments().length > 0) {
-        return true;
-      }
-      final long threshold = Registry.intValue("compiler.automake.postpone.when.idle.less.than", 3000); // todo: UI option instead of registry?
-      final long idleSinceLastActivity = ApplicationManager.getApplication().getIdleTime();
-      return idleSinceLastActivity < threshold;
-    }
-  };
-
-  private final BuildManagerPeriodicTask myDocumentSaveTask = new BuildManagerPeriodicTask() {
-    @Override
-    protected int getDelay() {
-      return Registry.intValue("compiler.document.save.trigger.delay");
-    }
-
-    @Override
-    public void runTask() {
-      if (shouldSaveDocuments()) {
-        ApplicationManager.getApplication().invokeAndWait(
-          () -> ((FileDocumentManagerImpl)FileDocumentManager.getInstance()).saveAllDocuments(false)
-        );
-      }
-    }
-
-    private static boolean shouldSaveDocuments() {
-      final Project contextProject = getCurrentContextProject();
-      return contextProject != null && canStartAutoMake(contextProject);
-    }
-  };
+  private final BuildManagerPeriodicTask myDocumentSaveTask;
 
   private final Runnable myGCTask = () -> {
     // todo: make customizable in UI?
@@ -295,8 +264,53 @@ public final class BuildManager implements Disposable {
   private volatile boolean myBuildProcessDebuggingEnabled;
 
   public BuildManager(@NotNull CoroutineScope coroutineScope) {
-    myRequestsProcessor = AppJavaExecutorUtil.createSingleTaskApplicationPoolExecutor("BuildManager RequestProcessor Pool", coroutineScope);
-    myAutomakeTrigger = AppJavaExecutorUtil.createSingleTaskApplicationPoolExecutor("BuildManager Auto-Make Trigger", coroutineScope);
+    myRequestsProcessor = AppJavaExecutorUtil.createBoundedTaskExecutor("BuildManager RequestProcessor Pool", coroutineScope);
+    myAutomakeTrigger = AppJavaExecutorUtil.createBoundedTaskExecutor("BuildManager Auto-Make Trigger", coroutineScope);
+
+    myAutoMakeTask = new BuildManagerPeriodicTask(coroutineScope) {
+      @Override
+      protected int getDelay() {
+        return Registry.intValue("compiler.automake.trigger.delay");
+      }
+
+      @Override
+      protected void runTask() {
+        runAutoMake();
+      }
+
+      @Override
+      protected boolean shouldPostpone() {
+        // Heuristics for automake postpone decision:
+        // 1. There are unsaved documents OR
+        // 2. The IDE is not idle: the last activity happened less than 3 seconds ago (registry-configurable)
+        if (FileDocumentManager.getInstance().getUnsavedDocuments().length > 0) {
+          return true;
+        }
+        final long threshold = Registry.intValue("compiler.automake.postpone.when.idle.less.than", 3000); // todo: UI option instead of registry?
+        final long idleSinceLastActivity = ApplicationManager.getApplication().getIdleTime();
+        return idleSinceLastActivity < threshold;
+      }
+    };
+    myDocumentSaveTask = new BuildManagerPeriodicTask(coroutineScope) {
+      @Override
+      protected int getDelay() {
+        return Registry.intValue("compiler.document.save.trigger.delay");
+      }
+
+      @Override
+      public void runTask() {
+        if (shouldSaveDocuments()) {
+          ApplicationManager.getApplication().invokeAndWait(
+            () -> ((FileDocumentManagerImpl)FileDocumentManager.getInstance()).saveAllDocuments(false)
+          );
+        }
+      }
+
+      private static boolean shouldSaveDocuments() {
+        final Project contextProject = getCurrentContextProject();
+        return contextProject != null && canStartAutoMake(contextProject);
+      }
+    };
 
     final Application application = ApplicationManager.getApplication();
     IS_UNIT_TEST_MODE = application.isUnitTestMode();
@@ -313,7 +327,7 @@ public final class BuildManager implements Disposable {
       myFallbackSdkVersion = fallbackSdkVersion;
     }
 
-    MessageBusConnection connection = application.getMessageBus().connect(this);
+    SimpleMessageBusConnection connection = application.getMessageBus().connect(coroutineScope);
     connection.subscribe(ProjectCloseListener.TOPIC, new ProjectWatcher());
     connection.subscribe(VirtualFileManager.VFS_CHANGES, new BulkFileListener() {
       @Override
@@ -322,7 +336,7 @@ public final class BuildManager implements Disposable {
           synchronized (myUnprocessedEvents) {
             myUnprocessedEvents.addAll(events);
           }
-          myAutomakeTrigger.schedule(() -> {
+          myAutomakeTrigger.execute(() -> {
             if (!application.isDisposed()) {
               ReadAction.run(()-> {
                 if (application.isDisposed()) {
@@ -502,72 +516,60 @@ public final class BuildManager implements Disposable {
     return ApplicationManager.getApplication().getService(BuildManager.class);
   }
 
-  public void notifyFilesChanged(final Collection<? extends File> paths) {
-    if (!paths.isEmpty()) {
-      notifyFilesChanged(() -> paths);
-    }
-  }
-
-  public void notifyFilesChanged(Supplier<Collection<? extends File>> filesProvider) {
-    doNotify(filesProvider, false);
-  }
-
-  public void notifyFilesDeleted(Collection<? extends File> paths) {
-    if (!paths.isEmpty()) {
-      notifyFilesDeleted(() -> paths);
-    }
-  }
-
-  public void notifyFilesDeleted(Supplier<Collection<? extends File>> filesProvider) {
-    doNotify(filesProvider, true);
-  }
-
   public void runCommand(@NotNull Runnable command) {
-    myRequestsProcessor.schedule(command);
+    myRequestsProcessor.execute(command);
   }
 
-  private void doNotify(final Supplier<Collection<? extends File>> pathsProvider, final boolean notifyDeletion) {
+  public sealed interface Changes permits Changes.Incomplete, Changes.Paths {
+
+    static Changes createIncomplete() {
+      return Incomplete.instance;
+    }
+
+    record Paths(Iterable<InternedPath> deleted, Iterable<InternedPath> changed) implements Changes {}
+
+    final class Incomplete implements Changes {
+      public static final Incomplete instance = new Incomplete();
+    }
+  }
+
+  public void notifyChanges(Supplier<? extends Changes> changeProvider) {
     // ensure events are processed in the order they arrived
     runCommand(() -> {
-      final Collection<? extends File> paths = pathsProvider.get();
-      if (paths.isEmpty()) {
-        return;
-      }
-      final List<String> filtered = new ArrayList<>(paths.size());
-      for (File file : paths) {
-        final String path = FileUtil.toSystemIndependentName(file.getPath());
-        if (PATH_FILTER.apply(path)) {
-          filtered.add(path);
-        }
-      }
-      if (filtered.isEmpty()) {
-        return;
-      }
-      synchronized (myProjectDataMap) {
-        for (Map.Entry<String, ProjectData> entry : myProjectDataMap.entrySet()) {
-          final ProjectData data = entry.getValue();
-          if (notifyDeletion) {
-            data.addDeleted(filtered);
-          }
-          else {
-            data.addChanged(filtered);
-          }
-          RequestFuture<?> future = myBuildsInProgress.get(entry.getKey());
-          if (future != null && !future.isCancelled() && !future.isDone()) {
-            final UUID sessionId = future.getRequestID();
-            final Channel channel = myMessageDispatcher.getConnectedChannel(sessionId);
-            if (channel != null) {
-              CmdlineRemoteProto.Message.ControllerMessage.FSEvent event = data.createNextEvent(wslPathMapper(entry.getKey()));
-              final CmdlineRemoteProto.Message.ControllerMessage message = CmdlineRemoteProto.Message.ControllerMessage.newBuilder().setType(
-                CmdlineRemoteProto.Message.ControllerMessage.Type.FS_EVENT
-              ).setFsEvent(event).build();
-              if (LOG.isDebugEnabled()) {
-                LOG.debug("Sending to running build, ordinal=" + event.getOrdinal());
+      if (changeProvider.get() instanceof Changes.Paths paths) {
+        synchronized (myProjectDataMap) {
+          for (Map.Entry<String, ProjectData> entry : myProjectDataMap.entrySet()) {
+            ProjectData data = entry.getValue();
+            // If a file name differs ony in case, on case-insensitive file systems such name still denotes the same file.
+            // In this situation filesDeleted and filesChanged sets will contain paths which are different only in case.
+            // Thus, the order in which BuildManager processes the changes, is important:
+            // first deleted paths must be processed and only then changed paths
+            boolean changed = data.addDeleted(Iterators.filter(paths.deleted(), PATH_FILTER::test));
+            changed |= data.addChanged(Iterators.filter(paths.changed(), PATH_FILTER::test));
+            if (changed) {
+              RequestFuture<?> future = myBuildsInProgress.get(entry.getKey());
+              if (future != null && !future.isCancelled() && !future.isDone()) {
+                final UUID sessionId = future.getRequestID();
+                final Channel channel = myMessageDispatcher.getConnectedChannel(sessionId);
+                if (channel != null) {
+                  CmdlineRemoteProto.Message.ControllerMessage.FSEvent event = data.createNextEvent(wslPathMapper(entry.getKey()));
+                  final CmdlineRemoteProto.Message.ControllerMessage message = CmdlineRemoteProto.Message.ControllerMessage.newBuilder().setType(
+                    CmdlineRemoteProto.Message.ControllerMessage.Type.FS_EVENT
+                  ).setFsEvent(event).build();
+                  if (LOG.isDebugEnabled()) {
+                    LOG.debug("Sending to running build, ordinal=" + event.getOrdinal());
+                  }
+                  channel.writeAndFlush(CmdlineProtoUtil.toMessage(sessionId, message));
+                }
               }
-              channel.writeAndFlush(CmdlineProtoUtil.toMessage(sessionId, message));
             }
           }
         }
+      }
+      else {
+        // incomplete changes
+        // force FS rescan on the next build, because information from event may be incomplete
+        clearState();
       }
     });
   }
@@ -608,16 +610,11 @@ public final class BuildManager implements Disposable {
     String projectPath = getProjectPath(project);
     cancelPreloadedBuilds(projectPath);
 
-    boolean clearNameCache = false;
     synchronized (myProjectDataMap) {
       ProjectData data = myProjectDataMap.get(projectPath);
       if (data != null) {
         data.dropChanges();
-        clearNameCache = myProjectDataMap.size() == 1;
       }
-    }
-    if (clearNameCache) {
-      InternedPath.clearCache();
     }
     scheduleAutoMake();
   }
@@ -632,7 +629,6 @@ public final class BuildManager implements Disposable {
       }
     }
     if (cleared) {
-      InternedPath.clearCache();
       scheduleAutoMake();
     }
   }
@@ -646,18 +642,11 @@ public final class BuildManager implements Disposable {
     synchronized (myProjectDataMap) {
       ProjectData data = myProjectDataMap.get(projectPath);
       if (data != null && !data.myNeedRescan) {
-        return convertToStringPaths(data.myChanged);
+        Set<InternedPath> changed = data.myChanged;
+        return Iterators.collect(Iterators.map(changed, InternedPath::getValue), new ArrayList<>(changed.size()));
       }
       return null;
     }
-  }
-
-  private static @NotNull List<String> convertToStringPaths(@NotNull Collection<? extends InternedPath> interned) {
-    List<String> list = new ArrayList<>(interned.size());
-    for (InternedPath path : interned) {
-      list.add(path.getValue());
-    }
-    return list;
   }
 
   private static @NotNull String getProjectPath(@NotNull Project project) {
@@ -774,11 +763,7 @@ public final class BuildManager implements Disposable {
       if (window == null) {
         window = ComponentUtil.getActiveWindow();
       }
-
-      Component component = ComponentUtil.findUltimateParent(window);
-      if (component instanceof IdeFrame) {
-        project = ((IdeFrame)component).getProject();
-      }
+      project = getProjectForComponent(window);
     }
 
     return isValidProject(project)? project : null;
@@ -817,39 +802,47 @@ public final class BuildManager implements Disposable {
     }
   }
 
-  public void cancelPreloadedBuilds(@NotNull Project project) {
-    cancelPreloadedBuilds(getProjectPath(project));
+  public @NotNull TaskFuture<Boolean> cancelPreloadedBuilds(@NotNull Project project) {
+    return cancelPreloadedBuilds(getProjectPath(project));
   }
 
-  private void cancelPreloadedBuilds(@NotNull String projectPath) {
+  private @NotNull TaskFuture<Boolean> cancelPreloadedBuilds(@NotNull String projectPath) {
     if (LOG.isDebugEnabled()) {
       LOG.debug("Cancel preloaded build for " + projectPath + "\n" + getThreadTrace(Thread.currentThread(), 50));
     }
+    CompletableFuture<Boolean> future = new CompletableFuture<>();
     runCommand(() -> {
       Pair<RequestFuture<PreloadedProcessMessageHandler>, OSProcessHandler> pair = takePreloadedProcess(projectPath);
-      if (pair == null) {
-        return;
+      if (pair != null) {
+        stopProcess(projectPath, pair.first.getRequestID(), pair.second, future);
       }
+      else {
+        future.complete(Boolean.TRUE);
+      }
+    });
+    return new TaskFutureAdapter<>(future);
+  }
 
-      final RequestFuture<PreloadedProcessMessageHandler> future = pair.first;
-      final OSProcessHandler processHandler = pair.second;
-      myMessageDispatcher.cancelSession(future.getRequestID());
-      // waiting for the preloaded process from project's task queue guarantees no build is started for this project
-      // until this one gracefully exits and closes all its storages
-      getProjectData(projectPath).taskQueue.execute(() -> {
-        Throwable error = null;
-        try {
-          while (!processHandler.waitFor()) {
-            LOG.info("processHandler.waitFor() returned false for session " + future.getRequestID() + ", continue waiting");
-          }
+  private void stopProcess(@NotNull String projectPath, @NotNull UUID sessionId, @NotNull OSProcessHandler processHandler, @Nullable CompletableFuture<Boolean> future) {
+    myMessageDispatcher.cancelSession(sessionId);
+    // waiting for the process from project's task queue guarantees no build is started for this project
+    // until this one gracefully exits and closes all its storages
+    getProjectData(projectPath).taskQueue.execute(() -> {
+      Throwable error = null;
+      try {
+        while (!processHandler.waitFor()) {
+          LOG.info("processHandler.waitFor() returned false for session " + sessionId + ", continue waiting");
         }
-        catch (Throwable e) {
-          error = e;
+      }
+      catch (Throwable e) {
+        error = e;
+      }
+      finally {
+        notifySessionTerminationIfNeeded(sessionId, error);
+        if (future != null) {
+          future.complete(error == null? Boolean.TRUE : Boolean.FALSE);
         }
-        finally {
-          notifySessionTerminationIfNeeded(future.getRequestID(), error);
-        }
-      });
+      }
     });
   }
 
@@ -875,9 +868,27 @@ public final class BuildManager implements Disposable {
 
     final String projectPath = getProjectPath(project);
     final boolean isAutomake = messageHandler instanceof AutoMakeMessageHandler;
+    final EelDescriptor eelDescriptor = EelProviderUtil.getEelDescriptor(project);
     final WSLDistribution wslDistribution = findWSLDistribution(project);
-    final BuilderMessageHandler handler = new NotifyingMessageHandler(project, messageHandler, wslDistribution != null ? wslDistribution::getWindowsPath : null, isAutomake);
-    Function<String, String> pathMapper = wslDistribution != null ? wslDistribution::getWslPath : Function.identity();
+
+    Function<String, String> pathMapperBack;
+
+    if (canUseEel() && !EelPathUtils.isProjectLocal(project)) {
+      pathMapperBack = e -> EelNioBridgeServiceKt.asNioPath(EelPath.parse(e, eelDescriptor)).toString();
+    }
+    else {
+      pathMapperBack = wslDistribution != null ? wslDistribution::getWindowsPath : null;
+    }
+
+    final BuilderMessageHandler handler = new NotifyingMessageHandler(project, messageHandler, pathMapperBack, isAutomake);
+    Function<String, String> pathMapper;
+
+    if (canUseEel() && !EelPathUtils.isProjectLocal(project)) {
+      pathMapper = e -> asEelPath(Path.of(e)).toString();
+    }
+    else {
+      pathMapper = wslDistribution != null ? wslDistribution::getWslPath : Function.identity();
+    }
 
     final DelegateFuture _future = new DelegateFuture();
     // by using the same queue that processes events,
@@ -907,8 +918,18 @@ public final class BuildManager implements Disposable {
         future.setDone();
       }
       else {
+        String optionsPath = PathManager.getOptionsPath();
+
+        if (canUseEel() && !EelPathUtils.isProjectLocal(project)) {
+          final var eel = upgradeBlocking(eelDescriptor);
+          optionsPath = asEelPath(transferContentsIfNonLocal(eel, Path.of(optionsPath), null)).toString();
+        }
+        else {
+          optionsPath = pathMapper.apply(optionsPath);
+        }
+
         final CmdlineRemoteProto.Message.ControllerMessage.GlobalSettings globals =
-          CmdlineRemoteProto.Message.ControllerMessage.GlobalSettings.newBuilder().setGlobalOptionsPath(pathMapper.apply(PathManager.getOptionsPath()))
+          CmdlineRemoteProto.Message.ControllerMessage.GlobalSettings.newBuilder().setGlobalOptionsPath(optionsPath)
             .build();
         CmdlineRemoteProto.Message.ControllerMessage.FSEvent currentFSChanges;
         final ExecutorService projectTaskQueue;
@@ -922,17 +943,14 @@ public final class BuildManager implements Disposable {
             LOG.info("Scheduling build for " +
                      projectPath +
                      "; CHANGED: " +
-                     new HashSet<>(convertToStringPaths(data.myChanged)) +
+                       Iterators.collect(Iterators.map(data.myChanged, InternedPath::getValue), new HashSet<>()) +
                      "; DELETED: " +
-                     new HashSet<>(convertToStringPaths(data.myDeleted)));
+                       Iterators.collect(Iterators.map(data.myDeleted, InternedPath::getValue), new HashSet<>()));
           }
           needRescan = data.getAndResetRescanFlag();
           currentFSChanges = needRescan ? null : data.createNextEvent(wslPathMapper(wslDistribution));
           if (LOG.isDebugEnabled()) {
             LOG.debug("Sending to starting build, ordinal=" + (currentFSChanges == null ? null : currentFSChanges.getOrdinal()));
-          }
-          if (!needRescan && myProjectDataMap.size() == 1) {
-            InternedPath.clearCache();
           }
           projectTaskQueue = data.taskQueue;
         }
@@ -1066,10 +1084,21 @@ public final class BuildManager implements Disposable {
     return _future;
   }
 
+  private static boolean canUseEel() {
+    return Registry.is("compiler.build.can.use.eel");
+  }
+
   private boolean isProcessPreloadingEnabled(Project project) {
     // automatically disable process preloading when debugging or testing
     if (IS_UNIT_TEST_MODE || !Registry.is("compiler.process.preload") || myBuildProcessDebuggingEnabled) {
       return false;
+    }
+    if (canUseEel()) {
+      Path projectFilePath = Path.of(getProjectPath(project));
+      if (!EelProviderUtil.getEelDescriptor(projectFilePath).equals(LocalEelDescriptor.INSTANCE)) {
+        // non-local projects do not work correctly with preloaded processes
+        return false;
+      }
     }
     if (project.isDisposed()) {
       return true;
@@ -1123,8 +1152,10 @@ public final class BuildManager implements Disposable {
     return startListening(inetAddress);
   }
 
-  private synchronized int getWslPort(WSLDistribution dist, int localPort) {
-    return myWslProxyCache.computeIfAbsent(dist.getId() + ":" + localPort, key -> new WslProxy(dist, localPort)).getWslIngressPort();
+  private synchronized int getWslPort(WSLDistribution dist, InetSocketAddress localAddress) {
+    return myWslProxyCache
+      .computeIfAbsent(dist.getId() + ":" + localAddress, key -> new WslProxy(dist, localAddress))
+      .getWslIngressPort();
   }
 
   private synchronized void cleanWslProxies(WSLDistribution dist) {
@@ -1229,8 +1260,7 @@ public final class BuildManager implements Disposable {
       .orElseGet(() -> fallbackSdkProvider.apply(candidates.keySet()));
   }
 
-  @NotNull
-  private static Pair<Sdk, JavaSdkVersion> getIDERuntimeSdk() {
+  private static @NotNull Pair<Sdk, JavaSdkVersion> getIDERuntimeSdk() {
     @SuppressWarnings("removal")
     Sdk sdk = JavaAwareProjectJdkTableImpl.getInstanceEx().getInternalJdk();
     return Pair.create(sdk, JavaSdk.getInstance().getVersion(sdk));
@@ -1340,26 +1370,42 @@ public final class BuildManager implements Disposable {
     final CompilerWorkspaceConfiguration config = CompilerWorkspaceConfiguration.getInstance(project);
 
     InetAddress listenAddress = InetAddress.getLoopbackAddress();
-    int listenPort = ensureListening(listenAddress);
+    InetSocketAddress listenSocketAddress = new InetSocketAddress(listenAddress, ensureListening(listenAddress));
     String buildProcessConnectHost = listenAddress.getHostAddress();
-    int buildProcessConnectPort = listenPort;
+    int buildProcessConnectPort = listenSocketAddress.getPort();
 
     BuildCommandLineBuilder cmdLine;
-    WslPath wslPath = WslPath.parseWindowsUncPath(vmExecutablePath);
-    if (wslPath != null) {
-      WSLDistribution sdkDistribution = wslPath.getDistribution();
-      if (!sdkDistribution.equals(projectWslDistribution)) {
-        throw new ExecutionException(JavaCompilerBundle.message("build.process.wsl.distribution.dont.match", sdkName + " (WSL " + sdkDistribution.getPresentableName() + ")", MINIMUM_REQUIRED_JPS_BUILD_JAVA_VERSION));
-      }
-      cmdLine = new WslBuildCommandLineBuilder(project, sdkDistribution, wslPath.getLinuxPath(), progressIndicator);
-      buildProcessConnectHost = "127.0.0.1"; // WslProxy listen address on linux side
-      buildProcessConnectPort = getWslPort(sdkDistribution, listenPort);
+    WslPath wslPath;
+    if (canUseEel() && !EelPathUtils.isProjectLocal(project)) {
+      wslPath = null;
+      EelBuildCommandLineBuilder eelBuilder = new EelBuildCommandLineBuilder(project, Path.of(vmExecutablePath));
+      cmdLine = eelBuilder;
+      cmdLine.addParameter("-Dide.jps.remote.path.prefixes=" + eelBuilder.pathPrefixes().stream()
+        .map(e -> e.replace('\\', '/')).collect(Collectors.joining(";")));
+      buildProcessConnectHost = "127.0.0.1";
+      int listenPort = listenSocketAddress.getPort();
+      buildProcessConnectPort = eelBuilder.maybeRunReverseTunnel(listenPort, project); // TODO maybeRunReverseTunnel must return InetSocketAddress
     }
     else {
-      if (projectWslDistribution != null) {
-        throw new ExecutionException(JavaCompilerBundle.message("build.process.wsl.distribution.dont.match", sdkName, MINIMUM_REQUIRED_JPS_BUILD_JAVA_VERSION));
+      wslPath = WslPath.parseWindowsUncPath(vmExecutablePath);
+      if (wslPath != null) {
+        WSLDistribution sdkDistribution = wslPath.getDistribution();
+        if (!sdkDistribution.equals(projectWslDistribution)) {
+          throw new ExecutionException(JavaCompilerBundle.message("build.process.wsl.distribution.dont.match",
+                                                                  sdkName + " (WSL " + sdkDistribution.getPresentableName() + ")",
+                                                                  MINIMUM_REQUIRED_JPS_BUILD_JAVA_VERSION));
+        }
+        cmdLine = new WslBuildCommandLineBuilder(project, sdkDistribution, wslPath.getLinuxPath(), progressIndicator);
+        buildProcessConnectHost = "127.0.0.1"; // WslProxy listen address on linux side
+        buildProcessConnectPort = getWslPort(sdkDistribution, listenSocketAddress);
       }
-      cmdLine = new LocalBuildCommandLineBuilder(vmExecutablePath);
+      else {
+        if (projectWslDistribution != null) {
+          throw new ExecutionException(
+            JavaCompilerBundle.message("build.process.wsl.distribution.dont.match", sdkName, MINIMUM_REQUIRED_JPS_BUILD_JAVA_VERSION));
+        }
+        cmdLine = new LocalBuildCommandLineBuilder(vmExecutablePath);
+      }
     }
 
     boolean profileWithYourKit = false;
@@ -1404,15 +1450,29 @@ public final class BuildManager implements Disposable {
     }
 
     cmdLine.addParameter("-Djava.awt.headless=true");
+    if (Boolean.getBoolean(JPS_USE_EXPERIMENTAL_STORAGE)) {
+      cmdLine.addParameter("-D" + JPS_USE_EXPERIMENTAL_STORAGE + "=true");
+    }
 
-    String jnaBootLibraryPath = System.getProperty("jna.boot.library.path");
-    if (jnaBootLibraryPath != null) {
-      //noinspection SpellCheckingInspection
-      cmdLine.addParameter("-Djna.boot.library.path=" + jnaBootLibraryPath);
-      //noinspection SpellCheckingInspection
-      cmdLine.addParameter("-Djna.nosys=true");
-      //noinspection SpellCheckingInspection
-      cmdLine.addParameter("-Djna.noclasspath=true");
+    attachJnaBootLibraryIfNeeded(project, cmdLine, wslPath);
+    if (Registry.is("jps.build.use.workspace.model")) {
+      // todo: upload workspace model to remote side because it runs with eel
+      String globalCacheId = "Local";
+
+      cmdLine.addParameter("-Dintellij.jps.use.workspace.model=true");
+      WorkspaceModelCache cache = WorkspaceModelCache.getInstance(project);
+      GlobalWorkspaceModelCache globalCache = GlobalWorkspaceModelCache.getInstance();
+      if (cache != null && globalCache != null) {
+        //todo ensure that caches are up-to-date or use a different way to pass serialized workspace model to the build process
+        cmdLine.addParameter("-Djps.workspace.storage.project.cache.path=" + cache.getCacheFile());
+        cmdLine.addParameter(
+          "-Djps.workspace.storage.global.cache.path=" + globalCache.cacheFile(new InternalEnvironmentNameImpl(globalCacheId)));
+        cmdLine.addParameter("-Djps.workspace.storage.relative.paths.in.cache=" + Registry.is("ide.workspace.model.store.relative.paths.in.cache", false));
+      }
+      else {
+        LOG.info("Workspace model caches aren't available and won't be used in the build process");
+      }
+      cmdLine.addParameter("--add-opens=java.base/java.util=ALL-UNNAMED");//used by com.esotericsoftware.kryo.kryo5.serializers.CachedFields.addField
     }
 
     if (sdkVersion != null) {
@@ -1438,7 +1498,25 @@ public final class BuildManager implements Disposable {
     }
 
     if (ProjectUtilCore.isExternalStorageEnabled(project)) {
-      cmdLine.addPathParameter("-D" + GlobalOptions.EXTERNAL_PROJECT_CONFIG + '=', ProjectUtil.getExternalConfigurationDir(project));
+      Path externalProjectConfig = ProjectUtil.getExternalConfigurationDir(project);
+      if (canUseEel() && !EelPathUtils.isProjectLocal(project)) {
+        try {
+          cmdLine.addPathParameter(
+            "-D" + GlobalOptions.EXTERNAL_PROJECT_CONFIG + '=',
+            cmdLine.copyProjectSpecificPathToTargetIfRequired(project, externalProjectConfig)
+          );
+        }
+        catch (NoSuchFileException ignored) {
+          // No external project cache -- no copy of external project cache.
+        }
+        catch (FileSystemException err) {
+          throw new ExecutionException("Failed to copy external project configuration", err);
+        }
+      }
+      else {
+        String pathToExternalStorage = externalProjectConfig.toString();
+        cmdLine.addPathParameter("-D" + GlobalOptions.EXTERNAL_PROJECT_CONFIG + '=', pathToExternalStorage);
+      }
     }
 
     cmdLine.addParameter("-D" + GlobalOptions.COMPILE_PARALLEL_OPTION + '=' + projectConfig.isParallelCompilationEnabled());
@@ -1521,17 +1599,19 @@ public final class BuildManager implements Disposable {
     }
 
     // portable caches
-    if (Registry.is("compiler.process.use.portable.caches") &&
+    if (RegistryManager.getInstance().is("compiler.process.use.portable.caches") &&
         CompilerCacheConfigurator.isServerUrlConfigured(project) &&
         CompilerCacheStartupActivity.isLineEndingsConfiguredCorrectly()) {
       cmdLine.addParameter("-D" + ProjectStamps.PORTABLE_CACHES_PROPERTY + "=true");
     }
-    else {
-      // Unified IC implementation is not tested with portable caches yet, so if caches are enabled, stick with the old implementation
-      // DepGraph-based IC implementation
-      if (AdvancedSettings.getBoolean("compiler.unified.ic.implementation")) {
-        cmdLine.addParameter("-D" + GlobalOptions.DEPENDENCY_GRAPH_ENABLED + "=true");
-      }
+
+    // DepGraph-based IC implementation
+    if (AdvancedSettings.getBoolean("compiler.unified.ic.implementation")) {
+      cmdLine.addParameter("-D" + GlobalOptions.DEPENDENCY_GRAPH_ENABLED + "=true");
+    }
+
+    if (Boolean.parseBoolean(System.getProperty(GlobalOptions.TRACK_LIBRARY_DEPENDENCIES_ENABLED, "false"))) {
+      cmdLine.addParameter("-D" + GlobalOptions.TRACK_LIBRARY_DEPENDENCIES_ENABLED + "=true");
     }
 
     // Java compiler's VM should use the same default locale that IDEA uses in order for javac to print messages in 'correct' language
@@ -1543,6 +1623,12 @@ public final class BuildManager implements Disposable {
         cmdLine.addParameter("-D" + name + '=' + value);
       }
     }
+    for (String name : Set.of("intellij.test.jars.location", "intellij.test.jars.mapping.file")) {
+      final String value = System.getProperty(name);
+      if (value != null) {
+        cmdLine.addPathParameter("-D" + name + "=", value);
+      }
+    }
     final DynamicBundle.LanguageBundleEP languageBundle = LocalizationUtil.INSTANCE.findLanguageBundle();
     if (languageBundle != null) {
       final PluginDescriptor pluginDescriptor = languageBundle.pluginDescriptor;
@@ -1552,11 +1638,24 @@ public final class BuildManager implements Disposable {
         cmdLine.addParameter("-D"+ GlobalOptions.LANGUAGE_BUNDLE + '=' + FileUtil.toSystemIndependentName(bundlePath));
       }
     }
-    cmdLine.addPathParameter("-D" + PathManager.PROPERTY_HOME_PATH + '=', FileUtil.toSystemIndependentName(PathManager.getHomePath()));
-    cmdLine.addPathParameter("-D" + PathManager.PROPERTY_CONFIG_PATH + '=', FileUtil.toSystemIndependentName(PathManager.getConfigPath()));
-    cmdLine.addPathParameter("-D" + PathManager.PROPERTY_PLUGINS_PATH + '=', FileUtil.toSystemIndependentName(PathManager.getPluginsPath()));
+    if (canUseEel() && EelPathUtils.isProjectLocal(project)) {
+      cmdLine.addPathParameter("-D" + PathManager.PROPERTY_HOME_PATH + '=', FileUtil.toSystemIndependentName(PathManager.getHomePath()));
+      cmdLine.addPathParameter("-D" + PathManager.PROPERTY_CONFIG_PATH + '=',
+                               FileUtil.toSystemIndependentName(PathManager.getConfigPath()));
+      cmdLine.addPathParameter("-D" + PathManager.PROPERTY_PLUGINS_PATH + '=',
+                               FileUtil.toSystemIndependentName(PathManager.getPluginsPath()));
+    }
 
-    cmdLine.addPathParameter("-D" + GlobalOptions.LOG_DIR_OPTION + '=', FileUtil.toSystemIndependentName(getBuildLogDirectory().getAbsolutePath()));
+    Path logPath = Path.of(FileUtil.toSystemIndependentName(getBuildLogDirectory().getAbsolutePath()));
+    cmdLine.addPathParameter("-D" + GlobalOptions.LOG_DIR_OPTION + '=', logPath);
+    if (AdvancedSettings.getBoolean(IN_MEMORY_LOGGER_ADVANCED_SETTINGS_NAME)) {
+      cmdLine.addParameter("-D" + GlobalOptions.USE_IN_MEMORY_FAILED_BUILD_LOGGER + "=true");
+    }
+
+    if (Registry.is("jps.report.registered.unexistent.output", false)) {
+      cmdLine.addParameter("-Djps.report.registered.unexistent.output=true");
+    }
+
     if (myFallbackSdkHome != null && myFallbackSdkVersion != null) {
       cmdLine.addPathParameter("-D" + GlobalOptions.FALLBACK_JDK_HOME + '=', myFallbackSdkHome);
       cmdLine.addParameter("-D" + GlobalOptions.FALLBACK_JDK_VERSION + '=' + myFallbackSdkVersion);
@@ -1565,7 +1664,9 @@ public final class BuildManager implements Disposable {
 
 
     final File projectSystemRoot = getProjectSystemDirectory(project);
-    cmdLine.addPathParameter("-Djava.io.tmpdir=", FileUtil.toSystemIndependentName(projectSystemRoot.getPath()) + "/" + TEMP_DIR_NAME);
+    File projectTempDir = new File(projectSystemRoot.getPath(), TEMP_DIR_NAME);
+    projectTempDir.mkdirs();
+    cmdLine.addPathParameter("-Djava.io.tmpdir=", FileUtil.toSystemIndependentName(projectTempDir.getPath()));
 
     for (BuildProcessParametersProvider provider : BuildProcessParametersProvider.EP_NAME.getExtensions(project)) {
       for (String arg : provider.getVMArguments()) {
@@ -1573,12 +1674,18 @@ public final class BuildManager implements Disposable {
       }
 
       for (Pair<String, Path> parameter : provider.getPathParameters()) {
-        cmdLine.addPathParameter(parameter.getFirst(), cmdLine.copyPathToTargetIfRequired(parameter.getSecond()));
+        try {
+          cmdLine.addPathParameter(parameter.getFirst(), cmdLine.copyProjectSpecificPathToTargetIfRequired(project, parameter.getSecond()));
+        }
+        catch (FileSystemException err) {
+          throw new ExecutionException("Failed to copy parameter " + parameter.getFirst(), err);
+        }
       }
     }
 
     //noinspection SpellCheckingInspection
     cmdLine.addParameter("-Dide.propagate.context=false");
+    cmdLine.addParameter("-Dintellij.platform.log.sync=true");
 
     @SuppressWarnings("UnnecessaryFullyQualifiedName") final Class<?> launcherClass = org.jetbrains.jps.cmdline.Launcher.class;
 
@@ -1636,7 +1743,12 @@ public final class BuildManager implements Disposable {
 
     for (BuildProcessParametersProvider buildProcessParametersProvider : BuildProcessParametersProvider.EP_NAME.getExtensions(project)) {
       for (String path : buildProcessParametersProvider.getAdditionalPluginPaths()) {
-        cmdLine.copyPathToTargetIfRequired(Paths.get(path));
+        try {
+          cmdLine.copyProjectSpecificPathToTargetIfRequired(project, Paths.get(path));
+        }
+        catch (FileSystemException err) {
+          throw new ExecutionException("Failed to copy additional plugin", err);
+        }
       }
     }
 
@@ -1707,6 +1819,30 @@ public final class BuildManager implements Disposable {
     return processHandler;
   }
 
+  private static void attachJnaBootLibraryIfNeeded(
+    @NotNull Project project,
+    @NotNull BuildCommandLineBuilder cmdLine,
+    @Nullable WslPath wslPath
+  ) {
+    // it's impossible to use a Windows DLL inside a WSL environment
+    if (wslPath != null) {
+      return;
+    }
+    // it's impossible to use a Windows DLL inside a non-local environment
+    if (!(EelProviderUtil.getEelDescriptor(project) instanceof LocalEelDescriptor)) {
+      return;
+    }
+    String jnaBootLibraryPath = System.getProperty("jna.boot.library.path");
+    if (jnaBootLibraryPath != null) {
+      //noinspection SpellCheckingInspection
+      cmdLine.addPathParameter("-Djna.boot.library.path=", jnaBootLibraryPath);
+      //noinspection SpellCheckingInspection
+      cmdLine.addParameter("-Djna.nosys=true");
+      //noinspection SpellCheckingInspection
+      cmdLine.addParameter("-Djna.noclasspath=true");
+    }
+  }
+
   private static void showSnapshotNotificationAfterFinish(@NotNull Project project) {
     MessageBusConnection busConnection = project.getMessageBus().connect();
     busConnection.subscribe(BuildManagerListener.TOPIC, new BuildManagerListener() {
@@ -1752,6 +1888,10 @@ public final class BuildManager implements Disposable {
 
   public static @NotNull File getBuildLogDirectory() {
     return new File(PathManager.getLogPath(), "build-log");
+  }
+
+  public @NotNull Path getProjectSystemDir(@NotNull Project project) {
+    return getProjectSystemDirectory(project).toPath();
   }
 
   public @NotNull File getProjectSystemDirectory(@NotNull Project project) {
@@ -1865,9 +2005,9 @@ public final class BuildManager implements Disposable {
   }
 
   private abstract class BuildManagerPeriodicTask implements Runnable {
-    private final Alarm myAlarm;
+    private final Alarm alarm;
     private final AtomicBoolean myInProgress = new AtomicBoolean(false);
-    private final Runnable myTaskRunnable = () -> {
+    private final Runnable taskRunnable = () -> {
       try {
         runTask();
       }
@@ -1876,8 +2016,11 @@ public final class BuildManager implements Disposable {
       }
     };
 
-    BuildManagerPeriodicTask() {
-      myAlarm = new Alarm(Alarm.ThreadToUse.POOLED_THREAD, BuildManager.this);
+    private final @NotNull CoroutineScope coroutineScope;
+
+    BuildManagerPeriodicTask(@NotNull CoroutineScope coroutineScope) {
+      this.coroutineScope = coroutineScope;
+      alarm = new Alarm(coroutineScope, Alarm.ThreadToUse.POOLED_THREAD);
     }
 
     final void schedule() {
@@ -1886,11 +2029,11 @@ public final class BuildManager implements Disposable {
 
     private void schedule(boolean increasedDelay) {
       cancelPendingExecution();
-      myAlarm.addRequest(this, Math.max(100, increasedDelay ? 10 * getDelay() : getDelay()));
+      alarm.addRequest(this, Math.max(100, increasedDelay ? 10 * getDelay() : getDelay()));
     }
 
     void cancelPendingExecution() {
-      myAlarm.cancelAllRequests();
+      alarm.cancelAllRequests();
     }
 
     protected boolean shouldPostpone() {
@@ -1906,7 +2049,7 @@ public final class BuildManager implements Disposable {
       final boolean shouldPostponeAllTasks = HeavyProcessLatch.INSTANCE.isRunning() || mySuspendBackgroundTasksCounter.get() > 0;
       if (!shouldPostponeAllTasks && !shouldPostpone() && !myInProgress.getAndSet(true)) {
         try {
-          AppJavaExecutorUtil.executeOnPooledIoThread(myTaskRunnable);
+          AppJavaExecutorUtil.executeOnPooledIoThread(coroutineScope, taskRunnable);
         }
         catch (CancellationException ignored) {
           // we were shut down
@@ -1963,9 +2106,6 @@ public final class BuildManager implements Disposable {
           ApplicationManager.getApplication().getMessageBus().syncPublisher(BuildManagerListener.TOPIC).buildFinished(myProject, sessionId, myIsAutomake);
         }
         catch (ProcessCanceledException ignored) {
-        }
-        catch (AlreadyDisposedException e) {
-          LOG.warn(e);
         }
         catch (Throwable e) {
           LOG.error(e);
@@ -2205,8 +2345,6 @@ public final class BuildManager implements Disposable {
   }
 
   private final class ProjectWatcher implements ProjectCloseListener {
-    private final Map<Project, MessageBusConnection> myConnections = new HashMap<>();
-
     @Override
     public void projectClosingBeforeSave(@NotNull Project project) {
       myAutoMakeTask.cancelPendingExecution();
@@ -2246,10 +2384,6 @@ public final class BuildManager implements Disposable {
           InternedPath.clearCache();
         }
       }
-      MessageBusConnection connection = myConnections.remove(project);
-      if (connection != null) {
-        connection.disconnect();
-      }
     }
   }
 
@@ -2268,24 +2402,26 @@ public final class BuildManager implements Disposable {
       return myNeedRescan || !myChanged.isEmpty() || !myDeleted.isEmpty();
     }
 
-    void addChanged(Collection<String> paths) {
+    boolean addChanged(Iterable<InternedPath> paths) {
+      boolean changes = false;
       if (!myNeedRescan) {
-        for (String path : paths) {
-          final InternedPath _path = InternedPath.create(path);
-          myDeleted.remove(_path);
-          myChanged.add(_path);
+        for (InternedPath path : paths) {
+          changes |= myDeleted.remove(path);
+          changes |= myChanged.add(path);
         }
       }
+      return changes;
     }
 
-    void addDeleted(Collection<String> paths) {
+    boolean addDeleted(Iterable<InternedPath> paths) {
+      boolean changes = false;
       if (!myNeedRescan) {
-        for (String path : paths) {
-          final InternedPath _path = InternedPath.create(path);
-          myChanged.remove(_path);
-          myDeleted.add(_path);
+        for (InternedPath path : paths) {
+          changes |= myChanged.remove(path);
+          changes |= myDeleted.add(path);
         }
       }
+      return changes;
     }
 
     CmdlineRemoteProto.Message.ControllerMessage.FSEvent createNextEvent(Function<String, String> pathMapper) {
@@ -2320,100 +2456,6 @@ public final class BuildManager implements Disposable {
       myNextEventOrdinal = 0L;
       myChanged.clear();
       myDeleted.clear();
-    }
-  }
-
-  private abstract static class InternedPath {
-    private static final LoadingCache<String, String> ourNameCache = Caffeine.newBuilder().maximumSize(2048).build(key -> key);
-
-    protected final String[] myPath;
-
-    /**
-     * @param path assuming a system-independent path with forward slashes
-     */
-    InternedPath(String path) {
-      List<String> list = new ArrayList<>();
-      StringTokenizer tokenizer = new StringTokenizer(path, "/", false);
-      while (tokenizer.hasMoreTokens()) {
-        list.add(ourNameCache.get(tokenizer.nextToken()));
-      }
-      myPath = list.toArray(String[]::new);
-    }
-
-    public abstract String getValue();
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) return true;
-      if (o == null || getClass() != o.getClass()) return false;
-
-      InternedPath path = (InternedPath)o;
-
-      return Arrays.equals(this.myPath, path.myPath);
-    }
-
-    @Override
-    public int hashCode() {
-      return Arrays.hashCode(myPath);
-    }
-
-    public static void clearCache() {
-      ourNameCache.invalidateAll();
-    }
-
-    public static InternedPath create(String path) {
-      return path.startsWith("//")? new WinInternedPath(path.substring(2), true) : path.startsWith("/")? new XInternedPath(path) : new WinInternedPath(path, false);
-    }
-  }
-
-  private static final class WinInternedPath extends InternedPath {
-    private final boolean myIsUNC;
-
-    private WinInternedPath(String path, boolean isUNC) {
-      super(path);
-      myIsUNC = isUNC;
-    }
-
-    @Override
-    public String getValue() {
-      if (myPath.length == 0) {
-        return myIsUNC? "//" : "";
-      }
-      if (myPath.length == 1) {
-        String name = myPath[0];
-        // handle the case of a Windows volume name
-        return name.length() == 2 && name.endsWith(":")? name + "/" : myIsUNC? "//" + name : name;
-      }
-
-      final StringBuilder buf = new StringBuilder();
-      if (myIsUNC) {
-        buf.append("/");
-      }
-      for (CharSequence element : myPath) {
-        if (!buf.isEmpty()) {
-          buf.append("/");
-        }
-        buf.append(element);
-      }
-      return buf.toString();
-    }
-  }
-
-  private static final class XInternedPath extends InternedPath {
-    private XInternedPath(String path) {
-      super(path);
-    }
-
-    @Override
-    public String getValue() {
-      if (myPath.length > 0) {
-        final StringBuilder buf = new StringBuilder();
-        for (CharSequence element : myPath) {
-          buf.append('/').append(element);
-        }
-        return buf.toString();
-      }
-      return "/";
     }
   }
 
